# rg-Sens

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  MILESTONE1.md  README.md  com.github.hilgardt_collab.rg_sens.desktop  rg-sens.desktop
.claude/agents/: code-reviewer.md
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git  PKGBUILD-local  README.md  build-local.sh  rg-sens.install
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: data_source.rs  displayer.rs  lib.rs  registry.rs
crates/displayers/: Cargo.toml
crates/displayers/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: arc_display.rs  art_deco_display.rs  art_nouveau_display.rs  background.rs  bar_display.rs  clock_display.rs  combo_traits.rs  core_bars_display.rs  cyberpunk_display.rs  fighter_hud_display.rs  graph_display.rs  industrial_display.rs  lcars_display.rs  lib.rs  material_display.rs  pango_text.rs  render_cache.rs  render_utils.rs  retro_terminal_display.rs  speedometer_display.rs  steampunk_display.rs  synthwave_display.rs  text_renderer.rs
crates/sources/: Cargo.toml
crates/sources/examples/: claude_oauth.rs
crates/sources/src/: claude.rs  claude_auth.rs  claude_plan.rs  combo.rs  cpu.rs  disk.rs  fan_speed.rs  lib.rs  memory.rs  network.rs  static_text.rs  system_temp.rs  test.rs
crates/sources/src/gpu/: amd.rs  backend.rs  detector.rs  intel.rs  mod.rs  nvidia.rs
crates/types/: Cargo.toml
crates/types/src/: background.rs  color.rs  combo.rs  field.rs  lib.rs  panel.rs  text.rs  theme.rs  timer.rs
crates/types/src/display_configs/: arc.rs  art_deco.rs  art_nouveau.rs  bar.rs  clock.rs  core_bars.rs  css_template.rs  cyberpunk.rs  digital_clock.rs  fighter_hud.rs  graph.rs  indicator.rs  industrial.rs  lcars.rs  material.rs  mod.rs  retro_terminal.rs  speedometer.rs  steampunk.rs  synthwave.rs  themed_configs.rs
crates/types/src/source_configs/: claude.rs  claude_plan.rs  clock.rs  combo.rs  cpu.rs  disk.rs  fan_speed.rs  gpu.rs  memory.rs  mod.rs  network.rs  static_text.rs  system_temp.rs  test.rs
data/: com.github.hilgardt_collab.rg_sens.desktop  rg-sens.desktop  rg-sens.metainfo.xml
data/icons/hicolor/: index.theme
docs/: combo-panel-lessons-learned.md  css-template-panel-guide.md
examples/: Art Deco.json  Art Nouveau.json  Cyberpunk.json  HUD.json  Industrial.json  LcarS.json  Material.json  My Template.html  RetroTerminal.json  SteamPunk.json  Synthwave.json  art_deco_panel.css  art_deco_panel.html  art_nouveau_panel.css  art_nouveau_panel.html  art_nouveau_panel_responsive.css  art_nouveau_panel_responsive.html  css_template_example.css  css_template_example.html  rg-sens-gauges.js  steampunk_panel.css  steampunk_panel.html
flatpak/: build.sh  io.github.hilgardtcollab.RgSens.desktop  io.github.hilgardtcollab.RgSens.yml
scripts/: cleanup_unused.py  install-desktop-integration.sh  remove_all_previews.py  remove_preview_draw_funcs.py  remove_preview_widgets.py
src/: lib.rs  main.rs
src/audio/: mod.rs
src/config/: defaults.rs  migration.rs  mod.rs  settings.rs
src/core/: animation_manager.rs  constants.rs  data_source.rs  displayer.rs  field_metadata.rs  mod.rs  panel.rs  panel_data.rs  registry.rs  shared_source_manager.rs  timer_manager.rs  update_manager.rs
src/displayers/: arc.rs  art_deco.rs  art_nouveau.rs  bar.rs  clock_analog.rs  clock_digital.rs  combo_displayer_base.rs  combo_generic.rs  combo_utils.rs  cpu_cores.rs  css_template.rs  css_template_backend.rs  cyberpunk.rs  fighter_hud.rs  graph.rs  indicator.rs  industrial.rs  lcars_combo.rs  material.rs  mod.rs  retro_terminal.rs  servo_backend.rs  speedometer.rs  steampunk.rs  synthwave.rs  text.rs  text_config.rs  webkit_backend.rs
src/plugin/: abi.rs  mod.rs
src/sources/: clock.rs  combo.rs  cpu.rs  disk.rs  fan_speed.rs  gpu.rs  memory.rs  mod.rs  network.rs  shared_sensors.rs  static_text.rs  system_temp.rs  test.rs
src/sources/gpu/: amd.rs  backend.rs  detector.rs  mod.rs  nvidia.rs
src/ui/: alarm_timer_dialog.rs  arc_config_widget.rs  arc_display.rs  art_deco_config_widget.rs  art_deco_display.rs  art_nouveau_config_widget.rs  art_nouveau_display.rs  auto_scroll.rs  background.rs  background_config_widget.rs  bar_config_widget.rs  bar_display.rs  claude_source_config_widget.rs  clipboard.rs  clock_analog_config_widget.rs  clock_digital_config_widget.rs  clock_display.rs  clock_source_config_widget.rs  color_button_widget.rs  color_picker.rs  combo_config_base.rs  combo_source_config_widget.rs  config_dialog.rs  config_helpers.rs  context_menu.rs  core_bars_config_widget.rs  core_bars_display.rs  cpu_source_config_widget.rs  css_template_config_widget.rs  css_template_display.rs  custom_color_picker.rs  cyberpunk_config_widget.rs  cyberpunk_display.rs  disk_source_config_widget.rs  fan_speed_config_widget.rs  fighter_hud_config_widget.rs  fighter_hud_display.rs  global_theme_widget.rs  gpu_source_config_widget.rs  gradient_editor.rs  (+43 more)
src/ui/config/: config_widget_trait.rs  lazy_config_widget.rs  mod.rs
src/ui/image_picker/: file_entry.rs  mod.rs
tests/: integration_tests.rs
