[workspace]
members = [
    ".",
    "crates/types",
    "crates/audio",
    "crates/core",
    "crates/render",
    "crates/sources",
]

[workspace.package]
version = "0.7.7"
edition = "2021"
license = "MIT OR Apache-2.0"

[package]
name = "rg-sens"
version.workspace = true
edition.workspace = true
authors = ["rg-Sens Contributors"]
description = "A fast, customizable system monitoring dashboard for Linux"
license.workspace = true
repository = "https://github.com/hilgardt-collab/rg-Sens"
keywords = ["system-monitor", "gtk", "dashboard", "linux"]
categories = ["gui", "visualization"]

[dependencies]
# Workspace crates
rg-sens-types = { path = "crates/types", features = ["gtk"] }
rg-sens-audio = { path = "crates/audio" }
rg-sens-core = { path = "crates/core" }
rg-sens-render = { path = "crates/render" }
rg-sens-sources = { path = "crates/sources", features = [] }

# GTK4 and graphics
gtk4 = { version = "0.9", features = ["v4_10"] }
gdk4 = "0.9"
cairo-rs = { version = "0.20", features = ["png"] }
pango = "0.20"
pangocairo = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.31"
nvml-wrapper = { version = "0.10", optional = true }  # NVIDIA GPU support

# CSS Template panel
regex = "1"  # Used for template placeholder detection
# WebKit is optional - only loaded when CSS Template panels are used
webkit6 = { version = "0.4", optional = true }
notify = { version = "7", optional = true }  # File watching for hot-reload
# Servo backend: Currently disabled due to dependency conflicts in libservo
# Once Servo's embedding API stabilizes, add:
# libservo = { git = "https://github.com/servo/servo", rev = "REVISION", optional = true }
# See: https://github.com/servo/servo and https://github.com/atbrakhi/servo-embedding

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"
arc-swap = "1"
rand = "0.8"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rodio = "0.19"  # Audio playback for alarms/timers
chrono = "0.4"
chrono-tz = "0.10"

# Configuration
directories = "5"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# Future: Dynamic plugin loading (commented for now)
# libloading = "0.8"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["nvidia", "webkit"]
nvidia = ["nvml-wrapper", "rg-sens-sources/nvidia"]  # NVIDIA GPU support
webkit = ["webkit6", "notify"]  # CSS Template panel with WebKit WebView support
servo = []  # CSS Template panel with Servo rendering (skeleton - libservo disabled due to dependency conflicts)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 1  # Slightly optimized debug builds for better performance during development

[[bin]]
name = "rg-sens"
path = "src/main.rs"

[lib]
name = "rg_sens"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]  # cdylib for future plugin system
