[package]
name = "rg-sens-core"
version = "0.7.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core traits and registry for rg-Sens system monitoring dashboard"

[dependencies]
rg-sens-types = { path = "../types" }
rg-sens-audio = { path = "../audio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
once_cell = "1"
