[package]
name = "rg-sens-core"
version = "0.7.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core traits and registry for rg-Sens system monitoring dashboard"

[dependencies]
rg-sens-types = { path = "../types" }
gtk4 = { version = "0.9", features = ["v4_10"] }
cairo-rs = { version = "0.20", features = ["png"] }
anyhow = "1"
serde_json = "1"
log = "0.4"
