[package]
name = "rg-sens-displayers"
version = "0.7.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Displayer implementations for rg-Sens visualizations"

[dependencies]
rg-sens-types = { path = "../types" }
rg-sens-core = { path = "../core" }
rg-sens-render = { path = "../render" }
gtk4 = { version = "0.9", features = ["v4_10"] }
gdk4 = "0.9"
cairo-rs = { version = "0.20", features = ["png"] }
pango = "0.20"
pangocairo = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
once_cell = "1"
rand = "0.8"

[features]
default = []
webkit = []
servo = []
