[package]
name = "rg-sens-sources"
version = "0.7.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Data source implementations for rg-Sens system monitoring"

[dependencies]
rg-sens-types = { path = "../types" }
rg-sens-core = { path = "../core" }
rg-sens-audio = { path = "../audio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
nvml-wrapper = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
once_cell = "1"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
nvidia = ["nvml-wrapper"]
