[package]
name = "rg-sens-types"
version = "0.7.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared data types for rg-Sens system monitoring dashboard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"

# Optional GTK/Cairo deps for Color's GTK convenience methods
gtk4 = { version = "0.9", features = ["v4_10"], optional = true }
gdk4 = { version = "0.9", optional = true }
cairo-rs = { version = "0.20", optional = true }

[features]
default = []
gtk = ["gtk4", "gdk4", "cairo-rs"]
